# actix_web_benchmark

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: hello.proto
src/: actor.rs  hello.rs  hello_grpc.rs  lib.rs  main.rs  server.rs
src/grpc_rs/: hello.rs  hello_grpc.rs
